fixed problem with send to mail

--- a/.env.example
+++ b/.env.example
@@ -9,11 +9,11 @@ DB_DATABASE = holiday
 
 JWTKEY = holiday
 TOKEN_EXPIRATION = 3600
-// MAIL_TRANSPORT = smtps://asgeir@meta.ua:pass@smtp.meta.ua
-// MAIL_FROM_NAME = WebWork
-// MAIL_PORT: 465
 
-MAIL_HOST: smtp.meta.ua
+
+
 MAIL_PORT: 465
+HOST: smtp.meta.ua
 MAIL_ID = asgeir@meta.ua
-MAIL_PASS = password
+MAIL_PASS = 384Xc4aJ21V
+NODE_TLS_REJECT_UNAUTHORIZED=0
