--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,6 @@ TOKEN_EXPIRATION = 3600
 
 MAIL_PORT: 465
 HOST: smtp.meta.ua
-MAIL_ID = asgeir@meta.ua
-MAIL_PASS = 384Xc4aJ21V
+MAIL_ID = zenbit_holidays@meta.ua
+MAIL_PASS = 0212Zenbit&Hol
 NODE_TLS_REJECT_UNAUTHORIZED=0
