--- a/.env.example
+++ b/.env.example
@@ -10,10 +10,9 @@ DB_DATABASE = holiday
 JWTKEY = holiday
 TOKEN_EXPIRATION = 3600
 
-
-
-MAIL_PORT: 465
-HOST: smtp.meta.ua
+// mail settings
+MAIL_PORT = 465
+MAIL_HOST = smtp.meta.ua
 MAIL_ID = zenbit_holidays@meta.ua
 MAIL_PASS = 0212Zenbit&Hol
 NODE_TLS_REJECT_UNAUTHORIZED=0
