--- a/.env.example
+++ b/.env.example
@@ -2,17 +2,20 @@ PORT=3030
 NODE_ENV=development
 // database settings
 DB_PORT = 3306
-DB_HOST = 94.130.182.136
-DB_USERNAME = holiday
-DB_PASSWORD = gY84jdvny7D
-DB_DATABASE = holiday
-
+// DB_HOST = 94.130.182.136
+// DB_USERNAME = holiday
+// DB_PASSWORD = gY84jdvny7D
+// DB_DATABASE = holiday
+DB_HOST = remotemysql.com
+DB_USERNAME = h9r6G9p9aj
+DB_PASSWORD = 2uSlyLORAl
+DB_DATABASE = h9r6G9p9aj
 JWTKEY = holiday
 TOKEN_EXPIRATION = 3600
 
 // mail settings
 MAIL_PORT = 465
 MAIL_HOST = smtp.meta.ua
-MAIL_ID = zenbit_holidays@meta.ua
-MAIL_PASS = 0212Zenbit&Hol
+MAIL_ID = zenbit@meta.ua
+MAIL_PASS = 2412Holidays2021
 NODE_TLS_REJECT_UNAUTHORIZED=0
